--- a/site/style.css
+++ b/site/style.css
@@ -1594,7 +1594,7 @@ p {
     height: 100%;
     transform-style: preserve-3d;
     transition: transform 0.7s ease;
-    cursor: pointer;
+    cursor: none;
 }
 
 .ada-lang-flip:hover .ada-lang-inner {
